get rules working at backend

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-gobgp_interface/
-
 # Created by https://www.gitignore.io/api/macos,python,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=macos,python,windows,visualstudiocode
 
@@ -195,3 +193,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/macos,python,windows,visualstudiocode
+
+gobgp_interface/
+!project/static/lib
