--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+pilot/gobgp_interface/*.py
+
 # Created by https://www.gitignore.io/api/macos,python,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=macos,python,windows,visualstudiocode
 
@@ -193,6 +195,3 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/macos,python,windows,visualstudiocode
-
-gobgp_interface/
-!project/static/lib
