--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,5 @@
 gevent
 grpcio
 protobuf
-attrs
-bcrypt
-cffi
-click
-Flask
-Flask-Bcrypt
-Flask-Login
-Flask-SQLAlchemy
-Flask-Migrate
-Flask-WTF
-itsdangerous
-Jinja2
-MarkupSafe
-pluggy
-py
-pycparser
-pytest
-six
-SQLAlchemy
-Werkzeug
-WTForms
+flask
 protobuf3-to-dict
-simplejson
