--- a/supervisor/supervisor.conf
+++ b/supervisor/supervisor.conf
@@ -26,7 +26,7 @@ stderr_logfile_maxbytes=0
 [program:pilot]
 user=nobody
 group=nobody
-command=pilot --config /etc/pilot/pilot.toml
+command=pilot_server --config /etc/pilot/pilot.toml
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
