--- a/.gitignore
+++ b/.gitignore
@@ -195,3 +195,12 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/macos,python,windows,visualstudiocode
+
+# include the JS/CSS libraries
+# https://stackoverflow.com/a/5534865/2646069
+!lib/
+lib/*
+!static/lib/*
+!dist/
+dist/*
+!static/**/dist/*
