--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,14 @@
+recursive-include pilot/static *
 exclude .travis.yml
 exclude appveyor.yml
 exclude azure-pipelines.yaml
 exclude pytest.ini
 exclude README.md
 exclude Dockerfile
+prune .*
 prune dist
 prune build
 prune instance
+prune *.egg-info
 prune gobgp
 prune assets
