fix random error

--- a/supervisor/supervisor.conf
+++ b/supervisor/supervisor.conf
@@ -3,6 +3,7 @@ nodaemon=true
 logfile=/dev/null
 logfile_maxbytes=0
 pidfile=/var/run/supervisord.pid
+user=root
 
 [unix_http_server]
 file=/var/run/supervisor.sock
