add __init__.py to gobgp_interface

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 pilot/gobgp_interface/*.py
+!pilot/gobgp_interface/__init__.py
 
 # Created by https://www.gitignore.io/api/macos,python,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=macos,python,windows,visualstudiocode
