--- a/supervisor/supervisor.conf
+++ b/supervisor/supervisor.conf
@@ -17,7 +17,7 @@ serverurl=unix:///var/run/supervisor.sock
 [program:gobgp]
 user=nobody
 group=nobody
-command=gobgpd --config-type=toml --config-file=/etc/pilot/gobgpd.toml
+command=gobgpd --config-type=toml --config-file=/etc/pilot/gobgpd.toml --api-hosts=127.0.0.1:50051
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
